@@ -4,6 +4,11 @@ Release ...
   other than xterm.
 * Handle character case conversions with the '~' vi command correctly if the
   length of the converted multibyte sequence is smaller than the original one.
+* Fixed an old vi bug: If a vi command that yanked or deleted part of a line
+  was followed by an ex command that also yanked or deleted some text, a
+  following 'p' vi command pasted the text affected by the former vi command.
+  It now pastes the text of the last yank or delete even if that was an ex
+  command.
 
 Release 12/2/04
 * Support for multibyte character locales was added.
